# CLI_Trainer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
cli_trainer/: __init__.py  config.py  engine.py  levels_loader.py  main.py  matcher.py  models.py  state.json  ui.py
cli_trainer/bundled_levels/: linux.json
levels/: docker.json  git.json  index.json  linux.json  vim.json  windows.json
